apps/media/plex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - plex.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # filters:
      #   - type: RequestHeaderModifier
      #     requestHeaderModifier:
      #       set:
      #         - name: "Host"
      #           value: "192.168.15.254"
      backendRefs:
        - name: plex
          port: 32400
